#4375 - cleand the code up a bit. There's a CSS bug where loader if off-center for the ProductConfigurableAttributes.

--- a/packages/scandipwa/src/component/ProductConfigurableAttributes/ProductConfigurableAttributes.style.scss
+++ b/packages/scandipwa/src/component/ProductConfigurableAttributes/ProductConfigurableAttributes.style.scss
@@ -47,10 +47,6 @@
         align-items: center;
         padding-inline-start: 3px;
         padding-block-start: 3px;
-
-        &_isUnselected {
-            animation: var(--shake-animation);
-        }
     }
 
     &-DropDownList {
